feat: udistrital/sga_documentacion#129 se anaden los controladores y los helpers para poder manejar el nuevo flujo de informacion entre el cliente y la api crud
